deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: tinyservice-dpl
 labels:
  app: tinyservice
spec:
 replicas: 2
 selector:
  matchLabels:
    app: tinyservice
 template:
   metadata:
     labels:
       app: tinyservice
   spec:
     containers:
     - name: tinyservice
       image: tinyservice
       imagePullPolicy: Never
       ports:
       - containerPort: 3000
       livenessProbe:
         httpGet:
           path: /
           port: 3000
         initialDelaySeconds: 15
         timeoutSeconds: 2
         periodSeconds: 5
         failureThreshold: 1     
       resources:
         limits:
           memory: "128Mi" #128 MB
           cpu: "200m" #200 millicpu (.2 cpu or 20% of the cpu)
