nginx-alpine-emptyDir.pod.yml
apiVersion: v1 
kind: Pod 
metadata:
  name: nginx-alpine-volume
spec: 
  containers: 
  - name: nginx 
    image: nginx:alpine 
    volumeMounts: 
      - name: html 
        mountPath: /usr/share/nginx/html
        readOnly: true 
    resources:
  - name: html-updater 
    image: alpine 
    command: ["/bin/sh", "-c"] 
    args: 
      - while true; do date >> /html/index.html;sleep 15; done 
    resources:
    volumeMounts: 
      - name: html 
        mountPath: /html 
  volumes: 
  - name: html 
    emptyDir: {} #lifecycle tied to Pod
    
# kubectl apply -f nginx-alpine-emptyDir.pod.yml
# kubectl port-forward nginx-alpine-volume 8080:80
