Secret_Demo.yml
apiVersion: apps/v1
kind: Secret
metadata:
 name: db-passwords
type: Opaque 
data:
  app-password: abcd123e123fg=
  admin-password: abcd12ert3ef=


 # Get secrets
 Kubectl get secrets

 # Get YAML for specific secret
 kubectl get secrets db-passwords -o yaml

 

 ...

  enemies: aliens
  lives: "3"
  enemies.cheat: "true"
  enemies.cheat.level: "noGoodRotten"

 # Create a ConfigMap using data from a file
 Kubectl create configmap [cm-name] --from-env-file=[path-to-file] --save-config

  apiVersion: v1
  kind: ConfigMap
  data:
    game.config: 
      enemies: aliens
      lives: "3"
      enemies.cheat: "true"
      enemies.cheat.level: "noGoodRotten"





apiVersion: apps/v1
kind: ConfigMap
metadata:
 name: app-settings
 labels:
   app: app-settings
data:
  enemies: aliens
  lives: "3"
  enemies.cheat: "true"
  enemies.cheat.level: "noGoodRotten"



apiVersion: apps/v1
kind: Service
metadata:
 name: otherservice-svc
 ...
