loadbalancer.service.yml
apiVersion: v1
kind: Service
metadata:
  name: tinyservice-loadbalancer
spec:
  type: LoadBalancer
  selector: 
    app: tinyservice
  ports:
  - name: "3005"
    port: 3005
    targetPort: 3000
