nodeport.service.yml
apiVersion: v1
kind: Service
metadata:
  name: tinyservice-nodeport
spec:
  type: NodePort
  selector: 
    app: tinyservice
  ports:
  - port: 3005
    targetPort: 3000
    nodePort: 31000
