service.yml
apiVersion: v1
kind: Service
metadata:
  name: tinyservice-svc
  labels:
    name: tinyservice
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    name: tinyservice
