service_demo.yml
apiVersion: apps/v1
kind: Service
metadata:
 name: tinyservice-svc
 ...


apiVersion: apps/v1
kind: Service
metadata:
 name: otherservice-svc
 ...
